--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
  "private": true,
  "dependencies": {
   "@material-ui/core": "^4.12.3",
+  "@material-ui/data-grid": "^4.0.0-alpha.37",
   "@material-ui/icons": "^4.11.2",
   "@testing-library/jest-dom": "^5.12.0",
   "@testing-library/react": "^11.2.6",
