--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "@material-ui/core": "^4.12.3",
   "@material-ui/data-grid": "^4.0.0-alpha.37",
   "@material-ui/icons": "^4.11.2",
+  "@mui/x-data-grid": "^4.0.0",
   "@testing-library/jest-dom": "^5.12.0",
   "@testing-library/react": "^11.2.6",
   "@testing-library/user-event": "^12.8.3",
